packages/lexer/src/lexers/snapshots/nv_lexer__lexers__attribute_block_lexer__tests__lexes_attribute_tokens.snap
---
source: packages/lexer/src/lexers/attribute_block_lexer.rs
expression: lexer.tokens
---
[
    LexerToken {
        kind: Identifier(
            "attribute",
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 0,
                column: 1,
            },
            to: TokenPosition {
                line: 0,
                column: 9,
            },
        },
    },
    LexerToken {
        kind: Symbol(
            AttributeAssignmentEquals,
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 0,
                column: 11,
            },
            to: TokenPosition {
                line: 0,
                column: 11,
            },
        },
    },
    LexerToken {
        kind: Literal(
            Integer(
                1,
            ),
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 0,
                column: 13,
            },
            to: TokenPosition {
                line: 0,
                column: 13,
            },
        },
    },
    LexerToken {
        kind: Symbol(
            Newline,
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 0,
                column: 14,
            },
            to: TokenPosition {
                line: 0,
                column: 14,
            },
        },
    },
    LexerToken {
        kind: Identifier(
            "attribute",
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 1,
                column: 1,
            },
            to: TokenPosition {
                line: 1,
                column: 9,
            },
        },
    },
    LexerToken {
        kind: Symbol(
            AttributeAssignmentEquals,
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 1,
                column: 11,
            },
            to: TokenPosition {
                line: 1,
                column: 11,
            },
        },
    },
    LexerToken {
        kind: Literal(
            Integer(
                2,
            ),
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 1,
                column: 13,
            },
            to: TokenPosition {
                line: 1,
                column: 13,
            },
        },
    },
    LexerToken {
        kind: Symbol(
            Newline,
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 1,
                column: 14,
            },
            to: TokenPosition {
                line: 1,
                column: 14,
            },
        },
    },
    LexerToken {
        kind: Identifier(
            "attribute",
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 2,
                column: 1,
            },
            to: TokenPosition {
                line: 2,
                column: 9,
            },
        },
    },
    LexerToken {
        kind: Symbol(
            AttributeAssignmentEquals,
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 2,
                column: 11,
            },
            to: TokenPosition {
                line: 2,
                column: 11,
            },
        },
    },
    LexerToken {
        kind: Literal(
            Integer(
                3,
            ),
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 2,
                column: 13,
            },
            to: TokenPosition {
                line: 2,
                column: 13,
            },
        },
    },
    LexerToken {
        kind: Symbol(
            Newline,
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 2,
                column: 14,
            },
            to: TokenPosition {
                line: 2,
                column: 14,
            },
        },
    },
    LexerToken {
        kind: Symbol(
            BlockCloseCurly,
        ),
        range: TokenRange {
            from: TokenPosition {
                line: 3,
                column: 1,
            },
            to: TokenPosition {
                line: 3,
                column: 1,
            },
        },
    },
]
