packages/lexer/src/lexers/snapshots/nv_lexer__lexers__attribute_block_lexer__tests__lexes_builtin_attribute_tokens.snap
---
source: packages/lexer/src/lexers/attribute_block_lexer.rs
expression: lexer.tokens
---
- kind:
    Identifier: attr
  range:
    from:
      line: 0
      column: 1
    to:
      line: 0
      column: 4
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 0
      column: 6
    to:
      line: 0
      column: 6
- kind:
    Literal:
      Builtin: "True"
  range:
    from:
      line: 0
      column: 8
    to:
      line: 0
      column: 11
- kind:
    Symbol: Newline
  range:
    from:
      line: 0
      column: 12
    to:
      line: 0
      column: 12
- kind:
    Identifier: other
  range:
    from:
      line: 1
      column: 1
    to:
      line: 1
      column: 5
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 1
      column: 7
    to:
      line: 1
      column: 7
- kind:
    Literal:
      Builtin: "False"
  range:
    from:
      line: 1
      column: 9
    to:
      line: 1
      column: 13
- kind:
    Symbol: Newline
  range:
    from:
      line: 1
      column: 14
    to:
      line: 1
      column: 14
- kind:
    Identifier: another
  range:
    from:
      line: 2
      column: 1
    to:
      line: 2
      column: 7
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 2
      column: 9
    to:
      line: 2
      column: 9
- kind:
    Literal:
      Builtin: Nowt
  range:
    from:
      line: 2
      column: 11
    to:
      line: 2
      column: 14
