packages/lexer/src/lexers/snapshots/nv_lexer__lexers__attribute_block_lexer__tests__lexes_inline_attribute_tokens.snap
---
source: packages/lexer/src/lexers/attribute_block_lexer.rs
expression: lexer.tokens
---
- kind:
    Identifier: unique
  range:
    from:
      line: 0
      column: 1
    to:
      line: 0
      column: 6
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 0
      column: 8
    to:
      line: 0
      column: 8
- kind:
    Literal:
      Builtin: "True"
  range:
    from:
      line: 0
      column: 10
    to:
      line: 0
      column: 13
- kind:
    Symbol: Newline
  range:
    from:
      line: 0
      column: 14
    to:
      line: 0
      column: 14
- kind:
    Identifier: default
  range:
    from:
      line: 1
      column: 1
    to:
      line: 1
      column: 7
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 1
      column: 9
    to:
      line: 1
      column: 9
- kind:
    Literal:
      Integer: 2
  range:
    from:
      line: 1
      column: 11
    to:
      line: 1
      column: 11
- kind:
    Symbol: Newline
  range:
    from:
      line: 1
      column: 12
    to:
      line: 1
      column: 12
- kind:
    Identifier: attribute
  range:
    from:
      line: 2
      column: 1
    to:
      line: 2
      column: 9
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 2
      column: 11
    to:
      line: 2
      column: 11
- kind:
    Literal:
      Integer: 3
  range:
    from:
      line: 2
      column: 13
    to:
      line: 2
      column: 13
- kind:
    Symbol: Newline
  range:
    from:
      line: 2
      column: 14
    to:
      line: 2
      column: 14
- kind:
    Identifier: something
  range:
    from:
      line: 3
      column: 1
    to:
      line: 3
      column: 9
- kind:
    Symbol: AttributeAssignmentEquals
  range:
    from:
      line: 3
      column: 11
    to:
      line: 3
      column: 11
- kind:
    Literal:
      Integer: 4
  range:
    from:
      line: 3
      column: 13
    to:
      line: 3
      column: 13
- kind:
    Symbol: BlockCloseCurly
  range:
    from:
      line: 3
      column: 15
    to:
      line: 3
      column: 15
